Avoiding setup on mobile devices on normal scroll

--- a/scrollup-header.css
+++ b/scrollup-header.css
@@ -1,5 +1,6 @@
 @media (max-width: 767px) {
   .scrollup-header {
+    transform: translateZ(0);
     width: 100%;
     z-index: 1000;
   }
